--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -40,7 +41,7 @@
     <link rel="icon" type="image/png" sizes="16x16"
         href="">
     <!-- Local stylesheets -->
-    <link href="" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 
 </head>
 
