--- a/templates/base.html
+++ b/templates/base.html
@@ -30,25 +30,59 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="">
-    <link rel="icon" type="image/png" sizes="192x192"
-        href="">
-    <link rel="icon" type="image/png" sizes="512x512"
-        href="">
-    <link rel="icon" type="image/png" sizes="32x32"
-        href="">
-    <link rel="icon" type="image/png" sizes="16x16"
-        href="">
+    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" type="image/png" sizes="192x192" href="">
+    <link rel="icon" type="image/png" sizes="512x512" href="">
+    <link rel="icon" type="image/png" sizes="32x32" href="">
+    <link rel="icon" type="image/png" sizes="16x16" href="">
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 
 </head>
 
 <body>
-    <header>
-        header
-    </header>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></i><img src="{% static 'images/yara-logo.png' %}" alt="Yara name with a palm tree"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div class="links-container">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> <i class="fa-solid fa-compass"></i> Book Excursions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-bed"></i> stays</a>
+                    </li>
+
+                         <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Sign in
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#"> Sign in</a></li>
+                            <li><a class="dropdown-item" href="#">Sign up</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-solid fa-envelope"></i> Contact us</a>
+                    </li>
+                 </div>
+                    
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn sear-btn" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 
     <main>
         {% block content %}
