--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@
     --font: "Montserrat", Georgia, sans-serif;
     --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     --orange-pantone: #f85a15;
+    --gun-metal:#212a30;
     --font: "Montserrat", Georgia, sans-serif;
     --culture: #f2f2f2;
   }
@@ -42,6 +43,42 @@ width:200px;
     display: grid;
     grid-template-columns: auto auto auto auto;
 }
+
+
+/* -------------------------------------------------------------------- footer */
+#footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: var(--gun-metal);
+    background-size: cover;
+    box-shadow: var(--shadow);
+    color: var(--white);
+    display: grid;
+    grid-template-columns: auto;
+  }
+.footer-copyright{
+    margin: auto;
+}
+
+.social-media-links{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-content: center;
+    column-gap: 10px;
+}
+.social_links a{
+    color:white;
+}
+
+
+
+
+
+
+
 
 /* -------------------------------------------------------------------- Media queries */
 
