--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="">
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Qwitcher Grypen" rel="stylesheet">
 
 </head>
 
