--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,35 @@
 {% block content %}
 
 <div class="home-banner card">
-    <div class="hero-image">
-        <img src="{% static 'images/beach.jpg' %}" alt="beach and a palm tree image">
+    <!-- slide show images -->
+    <div class="slide">
+        <img src="/static/images/hero-images/boat-escursion.jpg" alt="boat-escursion image">
     </div>
-   <h2> Welcome to Dominican Republic ! </h2>
-</div>
+    <div class="slide">
+        <img src="/static/images/hero-images/macao-beach.jpg" alt="macao-beach image">
+    </div>
+    <div class="slide">
+        <img src="/static/images/hero-images/parashut.jpg" alt="parashut image">
+    </div>
+    
+    <div class="slide">
+        <img src="/static/images/hero-images/puntacana-beach.jpg" alt="puntacana-beach image">
+    </div>
+    
+    <div class="slide">
+        <img src="/static/images/hero-images/speed-boat.jpg" alt="speed-boat image">
+    </div>
 
+    <!-- Typing effects -->
+    <div>
+        <h2 class="heading"> Welcome to Dominican Republic ! </h2>
+        <h2 class="heading"> Yara Beach rooms and escursions! </h2>
+        <h2 class="heading"> Book a stay with free cancellation! </h2>
+        <h2 class="heading"> Special Rentals plus escursions! </h2>
+        <h2 class="heading"> Book escursions and stays with us! </h2>
+    </div>
+
+</div>
 
 
 {% endblock content %}
