--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></i><img src="{% static 'images/yara-logo.png' %}" alt="Yara name with a palm tree"></a>
+        <div class="container-fluid"> {% static '/images/hero-images/boat-escursion.jpg' %}
+            <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo.png' %}" alt="Yara name with a palm tree"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
