--- a/static/css/style.css
+++ b/static/css/style.css
@@ -273,6 +273,25 @@ object-fit: cover;
     .btn{
         font-size: 15px;
     }
+
+    #footer {
+        height: 50px;
+        grid-template-columns: auto auto;
+      }
+
+      .footer-copyright{
+        margin: auto;
+        line-height: 50px;
+    }
+    
+    .social-media-links{
+        column-gap: 15px;
+        line-height: 50px;
+    }
+    .social_links a{
+        font-size: 20px;
+    }
+
 }
 
 
