--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -6,49 +6,29 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 class="signup-title">REGISTER ACCOUNT</h3>
-                    <h1>{{mesage}}</h1>
-				</div>
-				<div class="d-flex justify-content-center form_container">
-					<form method="POST" action="">
-                         {% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-							{{ form.username}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
-							</div>
-							{{ form.email}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-							{{ form.password1}}
-						</div>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-							{{form.password2}}
-						</div>
+                    <form method='POST'>
+                    <h3>REGISTER ACCOUNT</h3>
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="mb-3">
+                            <label class="form-label">{{field.label}}</label>
+                            {{field}}
+                        </div>
+                        {% endfor %}
 
-				   		<div class="d-flex justify-content-center mt-3 login_container">
-				 			<input class="btn login_button" type="submit" value="Register Account">
-				   		</div>
-					</form>
-				</div>
-				{{form.errors }}
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="" class="ml-2">Login</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                        {% if form.errors %}
+                        <div class="alert alert-danger" role="alert">
+                            {{form.errors}}
+                          </div>
+                         {%endif%}
+                          
+                        <button type="submit" class="btn user_button">Submit</button>
+                        <p>Already have an account <a href="">Login</a></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock content %}
