Add django allauth with templates and delete my app accounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
 
     {% if messages %}
     <div class="alert alert-success" role="alert">
-        messages
+        {{messages}}
      </div>
     {% endif%}
 
