--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,7 +180,7 @@ object-fit: cover;
 
 .user_card{
     width: 350px;
-    margin-top: 10%;
+    margin-top: 5%;
     background: var(--white);
     position: relative;
     display: flex;
@@ -195,6 +195,7 @@ object-fit: cover;
 .form_container {
     margin-top: 20px;
 }
+
 .user_button{
     width: 100%;
     background-color:var(--orange-pantone);
@@ -207,21 +208,10 @@ object-fit: cover;
     border-color: var(--white);
 }
 
-.input-group-text {
-    height: 40px;
-    background:var(--orange-pantone)!important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
+.form-title{
+text-align: center;
 }
-.input_user,
-		.input_pass:focus {
-			box-shadow: none !important;
-			outline: 0px !important;
-}
-.btn-container {
-    padding: 0 2rem;
-}
+
 
 /* -------------------------------------------------------------------- footer */
 #footer {
