--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,21 +1,29 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+<div class="container h-100">
+  <div class="d-flex justify-content-center h-100">
+    <div class="user_card">
+      <h3 class="form-title">REGISTER ACCOUNT</h3>
+      <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{ form | crispy }}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <button type="submit" class="user_button btn">{% trans "Sign Up" %} &raquo;</button>
+      </form>
+      <p class="form-text">{% blocktrans %} Already have an account? <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    </div>
+  </div>
+</div>
+</div>
+</div>
 
 {% endblock %}
