--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,6 +5,9 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
+<div class="container h-100">
+  <div class="d-flex justify-content-center h-100">
+    <div class="user_card">
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -14,8 +17,11 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button class="btn user_button" type="submit">{% trans 'Sign Out' %}</button>
 </form>
+</div>
+</div>
+</div>
 
 
 {% endblock %}
