--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i class="fa-solid fa-user"></i> Logout</a></li>
-                            <li><a class="dropdown-item" href="{% url 'account_reset_password' %}"><i class="fa-solid fa-user-plus"></i> Change Password</a></li>
+                            <li><a class="dropdown-item" href="{% url 'account_change_password' %}"><i class="fa-solid fa-user-plus"></i> Change Password</a></li>
                         </ul>
                     </li>
 
