--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,7 +212,25 @@ object-fit: cover;
 text-align: center;
 }
 
+ ul.socialaccount_providers{
+    list-style-type: none;
+    margin:auto;
+    padding-left: 0;
+}
+.socialaccount_ballot a{
+    text-decoration: none;
+}
+.socialaccount_ballot {
+    height:40px;
 
+}
+.socialaccount_ballot img{
+    width: 100%;
+    height: 35px;
+    object-fit: cover;
+    box-shadow:var(--shadow);
+    border-radius: 5px;
+}
 /* -------------------------------------------------------------------- footer */
 #footer {
     position: fixed;
