Add SOCIALACCOUNT_LOGIN_ON_GET to true and move social account info

--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -16,7 +16,7 @@
 <li>
   <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}"
     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><img
-      src="{% static 'images/signin-google-btn.png' %}" alt="google logo">
+      src="{% static 'images/signin-google-btn.png' %}" alt="Google logo">
   </a>
 </li>
 {% endfor %}
