--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,23 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+<div class="container h-100">
+    <div class="d-flex justify-content-center h-100">
+        <div class="user_card">
+            <h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+            <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                {% csrf_token %}
+                {{ form | crispy}}
+                <input type="submit" class="user_button btn" name="action" value="{% trans 'Set Password' %}" />
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
