Add excursion_base.html and fixed miss spelling in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,10 +27,10 @@
     <!-- Typing effects -->
     <div>
         <h2 class="heading"> Welcome to Dominican Republic ! </h2>
-        <h2 class="heading"> Yara Beach rooms and escursions! </h2>
+        <h2 class="heading"> Yara Beach rooms and excursions! </h2>
         <h2 class="heading"> Book a stay with free cancellation! </h2>
-        <h2 class="heading"> Special Rentals plus escursions ! </h2>
-        <h2 class="heading"> Book escursions and stays with us! </h2>
+        <h2 class="heading"> Special Rentals plus excursions ! </h2>
+        <h2 class="heading"> Book excursions and stays with us! </h2>
     </div>
 </section>
 
