--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <div class="links-container">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> <i class="fa-solid fa-compass"></i> Book Excursions</a>
+                        <a class="nav-link" href="{% url 'excursions' %}"> <i class="fa-solid fa-compass"></i> Book Excursions</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa-solid fa-bed"></i> stays</a>
