--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -55,12 +55,22 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <div class="links-container">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'excursions' %}"> <i class="fa-solid fa-compass"></i> Book
-                                Excursions</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <i class="fa-solid fa-bed"></i> Rentals
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href=""></i>Sort by newest</a></li>
+                                <li><a class="dropdown-item" href="">Sort by Oldest</a></li>
+                                <li><a class="dropdown-item" href="">Price (low to high)</a></li>
+                                <li><a class="dropdown-item" href="">Price (high to low) </a></li>
+                            </ul>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'rentals' %}"><i class="fa-solid fa-bed"></i> Rentals</a>
+                            <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i></i>
+                                Home</a>
                         </li>
                         {% if not user.is_authenticated %}
                         <li class="nav-item dropdown">
@@ -90,7 +100,6 @@
                         </li>
 
                         {% endif %}
-
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="fa-solid fa-envelope"></i> Contact us</a>
                         </li>
@@ -98,7 +107,7 @@
 
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="Search rentals" aria-label="Search">
                     <button class="btn sear-btn btn-outline-secondary" type="submit">Search</button>
                 </form>
             </div>
