Add excursion_detailsin view and wire it

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -9,8 +9,8 @@
     <div class="card-container">
       {% for excursion in excursions %}
         <div class="card-wrapper">
-            <img src="{{excursion.image.url}}"
-                alt="{{excursion.image_alt}}">
+            <a  href="{% url 'detail' excursion.pk %}"><img src="{{excursion.image.url}}"
+                alt="{{excursion.image_alt}}"> </a> 
             <h5 class="card-title">{{excursion.title|slice:":30"|title}}..</h5>
             <div class="card-star">
                 <i class="fa-solid fa-star"></i>
