--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -2,9 +2,11 @@
 {% load static %}
 
 {% block content %}
-
 <section>
-    <h1 class="text-center mt-5">details</h1>
+    <div class="detail_wrapper">
+        <div>
+            <img style="width:100px" src="{{excursions.image.url}}">
+        </div> 
+    </div>
 </section>
-
 {% endblock content %}
