--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -90,6 +90,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i class="fa-solid fa-user"></i> Logout</a></li>
                             <li><a class="dropdown-item" href="{% url 'account_change_password' %}"><i class="fa-solid fa-user-plus"></i> Change Password</a></li>
+                            <li><a class="dropdown-item" href="{% url 'form' %}"><i class="fa-solid fa-user-plus"></i> Add excursions</a></li>
                         </ul>
                     </li>
 
