--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -3,16 +3,84 @@
 
 {% block content %}
 <section>
-    <div class="detail_wrapper">
-        <div>
-            <img style="width:100px" src="{{excursions.main_image.url}}">
-        </div> 
+    <div class="detail-container">
+        <h1 class="detail-title">{{excursions.title}}</h1>
+        <div class="item-detail-and-image-container">
+            <!-- main image -->
+            <div class="image-container">
+                <div class="main-image">
+                    <img src="{{excursions.main_image.url}}" alt="{{excursions.image_name}}">
+                </div>
 
-        
-       {% for excursion in excursions.photos.all %}
-       <img style="width:100px" src="{{excursion.images.url}}">
-       {% endfor %}
-        
+                <!-- rest of the photos -->
+                <div class="photos-and-icon-wrapper">
+                <i id="arrow-left" class="fa-solid fa-circle-arrow-left"></i>
+                <div class="photos">
+                    {% for excursion in excursions.photos.all %}
+                    <img class="thumbnails" style="width:100px" src="{{excursion.images.url}}" alt="{{excursions.image_name}}">
+                    {% endfor %}
+                    {% for excursion in excursions.photos.all %}
+                    <img  class="thumbnails"  style="width:100px" src="{{excursion.images.url}}" alt="{{excursions.image_name}}">
+                    {% endfor %}
+                    {% for excursion in excursions.photos.all %}
+                    <img  class="thumbnails"  style="width:100px" src="{{excursion.images.url}}" alt="{{excursions.image_name}}">
+                    {% endfor %}
+                    {% for excursion in excursions.photos.all %}
+                    <img  class="thumbnails"  style="width:100px" src="{{excursion.images.url}}" alt="{{excursions.image_name}}">
+                    {% endfor %}
+                </div>
+                <i id="arrow-right" class="fa-solid fa-circle-arrow-right"></i>
+            </div>
+            </div>
+            <!-- item details aside -->
+            <div class="item-detail card">
+                <form>
+                     <!-- price -->
+                    <div class="form-row">
+                        <div class="detail-price"> <strong>Price:</strong> £{{excursions.Price}}</div>
+                        <div>Lowest Price garantee</div>
+                        <hr>
+                            <!-- date -->
+                        <div class="form-group mt-3">
+                            <label for="date">Select Date and Travellers</label>
+                            <input type="date" class="form-control" id="date">
+                        </div>
+                            <!-- number of adults -->
+                        <div class="form-group mt-3">
+                            <label for="exampleFormControlSelect1">Select Adult (11-85 years old)</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                          <!-- number of childrens -->
+                        <div class="form-group mt-3">
+                            <label for="exampleFormControlSelect1">Select Child (3 - 10 years old)</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option>1</option>xs
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                          <!-- pick up info -->
+                        <div class="form-group mt-3">
+                            <label for="inputCity">Place to be pick up</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+                          <!-- Submit button -->
+                        <div class="form-group mt-3">
+                            <button type="submit" class="user_button btn">Submit</button>
+                        </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     </div>
 </section>
 {% endblock content %}
