--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,13 +230,13 @@ object-fit: cover;
 	overflow-x: auto;
     margin-top: 10px;
 }
-.photos img{
+.thumbnails{
     padding: 5px;
     border-radius: 10px;
     opacity: 0.5;
+    width: 100px;
+	height: 70px;
     object-fit: cover;
-    max-width: 180px;
-	max-height: 100px;
     cursor: pointer;
 }
 
@@ -263,7 +263,14 @@ object-fit: cover;
     font-size: 30px;
 }
 
-
+.active-image{
+    opacity: 1;
+    border:2px solid var(--orange-pantone);
+}
+#arrow-left:hover,
+#arrow-right:hover{
+    opacity: 0.5;
+}
 /* -------------------------------------------------------------------- accounts signup/signin etc */
 
 .user_card{
